--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ body {
     padding: 0 1em;
 }
 
+.responsive-img {
+  max-width: 100%;
+  height: auto;
+}
+
 @media screen and (min-width: 52em) {
     .centered {
         max-width: 52em;
