--- a/src/App/CSS/App.css
+++ b/src/App/CSS/App.css
@@ -1,3 +1,17 @@
+html,
+  body {
+    height: 100%;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+*{
+  box-sizing: border-box;
+}
+
 .centered {
   margin: 0 auto;
   padding: 0 1em;
