--- a/src/Header/CSS/Header.css
+++ b/src/Header/CSS/Header.css
@@ -22,7 +22,7 @@
 }
 
 /* Styles for Single Level Menu */
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 50em) {
 
   .single-nav ul {
     display: flex;
@@ -55,7 +55,15 @@
 	.site-branding img {
 		max-width: 80%;
 		max-height: 50%;
+	}
 
+	.single-nav {
+		display: flex;
+		justify-content: center;
+	}
+
+	.menu {
+		flex: 1 1 auto;
 	}
 
 }
