--- a/src/App/CSS/App.css
+++ b/src/App/CSS/App.css
@@ -1,4 +1,4 @@
-html,
+/* html,
   body {
     height: 100%;
   }
@@ -15,4 +15,4 @@ html,
 .centered {
   margin: 0 auto;
   padding: 0 1em;
-}
+} */
